[package]
name = "sia_rs"
version = "0.1.2"
edition = "2021"
authors = ["LordOfPolls <dev@lordofpolls.com"]
description = "A Rust library for interacting with the UK SIA Register"
homepage = "https://github.com/LordOfPolls/sia_rs"
repository = "https://github.com/LordOfPolls/sia_rs"
license = "MIT"
keywords = ["sia", "security", "uk", "api", "license"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
once_cell = "1.19.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.14"
tokio = "1.37.0"

[dev-dependencies]
env_logger = "0.11"
test-log = "0.2"
tokio = { version = "1.37.0", features = ["full"] }
